pass instance of UserCSVDataAccess to save country interactor to get current user